--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <html>
 
 <body>
-  <h1>David</h1>
-  <p>Welcome to my website!</p>
+  <h1>David M.</h1>
+  <p>Welcome to my first GitHub website! :D</p>
   <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" />
 </body>
 
